[package]
name = "day_3_puzzle_6"
version = "0.1.0"
authors = ["Kinrany <kinrany@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.25"
day_3_puzzle_5 = { path = "../day_3_puzzle_5" }
